# VMP-MemOS

./: .env.example  .gitignore  CODEX_PROMPT.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_PAPER.md  README.md  pyproject.toml
configs/: benchmark.yaml  default.yaml  llm.yaml  longmemeval.yaml
data/benchmarks/: memory_policy_toy.jsonl
memory_workspace/: INDEX.md  MEMORY.md
scripts/: __init__.py  audit_frameworks.py  check_vmp_v3_gate.py  check_vmp_v4_gate.py  create_longmemeval_split.py  download_longmemeval.py  export_longmemeval_ablation.py  export_longmemeval_cases.py  export_longmemeval_cost.py  export_longmemeval_tables.py  init_workspace.py  inspect_longmemeval.py  run_ablation.py  run_benchmark.py  run_demo.py  run_llm_smoke.py  run_longmemeval_ablation.sh  run_longmemeval_qa.py  run_longmemeval_retrieval.py  run_official_framework_smoke.py  run_vmp_tuned_experiment.sh  run_vmp_v4_experiment.sh  serve_embeddings.py  serve_graphiti_neo4j.sh  serve_letta.sh  serve_vllm.sh  setup_server.sh  train_policy.py  train_vmp_tuned.py
src/vmp_memos/: __init__.py
src/vmp_memos/backends/: __init__.py  base.py  file_backend.py  (+2 more)
tests/: test_ablation_runner.py  test_benchmark_runner.py  test_embedding_server.py  test_embeddings.py  test_file_backend.py  test_framework_adapters.py  test_framework_audit.py  test_framework_text.py  test_graphiti_official_adapter.py  test_hybrid_backend.py  test_init_workspace.py  test_langmem_official_adapter.py  test_learned_policy.py  test_letta_official_adapter.py  test_llm_vllm.py  test_longmemeval_ablation.py  test_longmemeval_cases.py  test_longmemeval_cost.py  test_longmemeval_loader.py  test_longmemeval_qa_runner.py  test_longmemeval_retrieval_runner.py  test_longmemeval_splits.py  test_mem0_official_adapter.py  test_operation_executor.py  test_operations.py  test_policy_controller.py  test_policy_feature_builder.py  test_policy_features.py  test_qa_metrics.py  test_retrieval_metrics.py  test_schemas.py  test_vector_backend.py  test_vmp_tuned.py
(+69 files in other folders)
