[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "vmp-memos"
version = "0.1.0"
description = "An explainable memory policy layer for long-running LLM agents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "VMP-MemOS contributors" }]
dependencies = [
    "pydantic>=2.7,<3.0",
    "pyyaml>=6.0,<7.0",
    "rich>=13.7,<15.0",
    "typer>=0.12,<1.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10,<2.0",
    "pytest>=8.2,<9.0",
    "ruff>=0.5,<1.0",
]
embeddings = [
    "numpy>=1.26,<3.0",
    "sentence-transformers>=3.0,<4.0",
]
official-mem0 = [
    "mem0ai[nlp]==2.0.10",
]
official-langmem = [
    "langmem==0.0.30",
    "langchain-openai==1.3.3",
]
official-graphiti = [
    "graphiti-core==0.29.2",
]
official-letta = [
    "letta-client==1.12.1",
]
# Reserved for later phases. Keeping these packages optional avoids pulling in
# benchmark and document-processing dependencies before they are needed.
future = [
    "markdown>=3.6,<4.0",
    "python-frontmatter>=1.1,<2.0",
    "scikit-learn>=1.5,<2.0",
    "tqdm>=4.66,<5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/vmp_memos"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
minversion = "8.0"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "scripts", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"src/vmp_memos/schemas/__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
